# ECIP-Checkpointing

./: .envrc  .ghci  .ghcid  .gitignore  .hlint.yaml  Checklist  README.md  README.org  cabal.project  default.nix  flake.nix  hie.yaml  overview.md  pre-commit  release.nix  run-local-test.sh
blockchain-checkpoint-node/: blockchain-checkpoint-node.cabal
blockchain-checkpoint-node/app/: blockchain-checkpoint-node.hs
blockchain-checkpoint-node/src/Blockchain/Common/: Bytes.hs  Conversions.hs  LocalSocket.hs  Parsers.hs  TopHandler.hs
blockchain-checkpoint-node/src/Blockchain/Config/: Logging.hs  Orphans.hs  Protocol.hs  Topology.hs  Types.hs
blockchain-checkpoint-node/src/Blockchain/Crypto/: ECDSASignature.hs
blockchain-checkpoint-node/src/Blockchain/Ledger/: BFT.hs  Block.hs  Forge.hs  PowTypes.hs  Run.hs  SnapshotTimeTravel.hs  State.hs  Tx.hs
blockchain-checkpoint-node/src/Blockchain/Node/: ProtocolInfo.hs  Run.hs  RunNode.hs
blockchain-checkpoint-node/src/Blockchain/Node/Features/: Node.hs
blockchain-checkpoint-node/src/Blockchain/RPC/: Request.hs  Types.hs
blockchain-checkpoint-node/src/Blockchain/Tracing/: Metrics.hs  ToObjectOrphans.hs  Tracers.hs  Types.hs
configuration/: blockchain-configuration.yaml  ec2-test-topology.json  morpho-configuration.yaml  morpho-topology.json  privkey  test-ec2-nodes.json
docs/: readme.md
docs/explanations/: crypto.md  implementation.md  introduction.md  morpho-topology.drawio
docs/howtos/: expanding-federation.md
docs/references/: configuration.md  getLatestBlock.drawio  rpc.md  topology.md
docs/tutorials/: getting-started.md
example/: .gitignore  morpho-topology.json  readme.md
example/mantis/: run  testnet-morpho.conf
example/morpho-0/: config.yaml  private-key  public-key
example/morpho-1/: config.yaml  private-key  public-key  run
morpho-checkpoint-node/: morpho-checkpoint-node.cabal
morpho-checkpoint-node/app/: morpho-checkpoint-node.hs
morpho-checkpoint-node/src/Morpho/Common/: Bytes.hs  Conversions.hs  Parsers.hs  Socket.hs  TopHandler.hs
morpho-checkpoint-node/src/Morpho/Config/: Combined.hs  Logging.hs  Orphans.hs  Topology.hs  Types.hs
morpho-checkpoint-node/src/Morpho/Crypto/: ECDSASignature.hs
morpho-checkpoint-node/src/Morpho/Ledger/: Block.hs  CodecConfig.hs  Forge.hs  PowTypes.hs  Serialise.hs  SnapshotTimeTravel.hs  State.hs  Tx.hs  Update.hs
morpho-checkpoint-node/src/Morpho/Node/: Env.hs  ProtocolInfo.hs  Run.hs  RunNode.hs
morpho-checkpoint-node/src/Morpho/Node/Features/: Node.hs
morpho-checkpoint-node/src/Morpho/RPC/: Abstract.hs  JsonRpc.hs  JsonRpcProtocol.hs  PoWMock.hs  Request.hs  Types.hs
morpho-checkpoint-node/src/Morpho/Tracing/: Metrics.hs  OrphanToJSONInstances.hs  Pretty.hs  ToObjectOrphans.hs  Tracers.hs  TracingOrphanInstances.hs  Types.hs  Verbosity.hs
morpho-checkpoint-node/src/Morpho/Tracing/Orphan/: ExternalToJSONInstances.hs  MorphoToJSONInstances.hs  TracingInstances.hs
morpho-checkpoint-node/tests/: mantis-integration-tests.hs  state-machine-tests.hs  test.hs
morpho-checkpoint-node/tests/Test/Morpho/: Config.hs  Examples.hs  Generators.hs  Golden.hs  MantisIntegration.hs  MockRpc.hs  QSM.hs  Serialisation.hs  Tracing.hs
morpho-checkpoint-node/tests/Test/Morpho/Common/: Tables.hs  Utils.hs
morpho-checkpoint-node/tests/Test/Morpho/Crypto/: ECDSASignature.hs
morpho-checkpoint-node/tests/Test/Morpho/Golden/: Config.yaml
morpho-checkpoint-node/tests/Test/Morpho/Ledger/: State.hs
morpho-checkpoint-node/tests/configuration/Golden/: Config.yaml  Topology.json  minimal.yaml  missing-interval.yaml  secret-key-invalid  secret-key-newline
morpho-checkpoint-node/tests/configuration/QSM/prop_1/: config-0.yaml  topology.json
morpho-checkpoint-node/tests/configuration/QSM/prop_2/: config-0.yaml  config-1.yaml  topology.json
morpho-checkpoint-node/tests/configuration/QSM/prop_3/: config-0.yaml  config-1.yaml  secret-key-1  topology.json
morpho-checkpoint-node/tests/configuration/QSM/prop_4/: config-0.yaml  config-1.yaml
morpho-checkpoint-node/tests/golden-encodings/MorphoNodeToClientVersion1/: ApplyTxErr  Block  GenTx
morpho-checkpoint-node/tests/golden-encodings/MorphoNodeToNodeVersion1/: Block  Header
morpho-checkpoint-node/tests/golden-encodings/disk/: AnnTip  Block  ExtLedgerState  HeaderHash  LedgerState
nix/: morpho-node.nix  sources.json  tools.nix
scripts/: bootstrap-timeslot-test.sh  generateTopology.py  mockBlockchainRPC.py  mockPoWNodeRPC.py  nix-setup
vm-test/: default.nix  mantis.nix  morpho.nix  obft-checkpoint.nix
vm-test/conf-templates/: morpho-config.yaml
