name:                  blockchain-checkpoint-node
version:               1.0.0
description:           Blockchain OBFT checkpoint node
author:                IOHK
maintainer:            operations@iohk.io
license:               Apache-2.0
build-type:            Simple
cabal-version:         >= 1.10
extra-source-files:    README.md, ChangeLog.md

library
  hs-source-dirs:      src
  exposed-modules:     Blockchain.Common.TopHandler
                       Blockchain.Common.LocalSocket
                       Blockchain.Common.Parsers
                       Blockchain.Common.Bytes
                       Blockchain.Common.Conversions
                       Blockchain.Config.Logging
                       Blockchain.Config.Orphans
                       Blockchain.Config.Protocol
                       Blockchain.Config.Topology
                       Blockchain.Config.Types
                       Blockchain.Crypto.ECDSASignature
                       Blockchain.Ledger.BFT
                       Blockchain.Ledger.Block
                       Blockchain.Ledger.Forge
                       Blockchain.Ledger.Run
                       Blockchain.Ledger.SnapshotTimeTravel
                       Blockchain.Ledger.State
                       Blockchain.Ledger.PowTypes
                       Blockchain.Ledger.Tx
                       Blockchain.Node.ProtocolInfo
                       Blockchain.Node.Run
                       Blockchain.Node.RunNode
                       Blockchain.Node.Features.Node
                       Blockchain.RPC.Request
                       Blockchain.RPC.Types
                       Blockchain.Tracing.ToObjectOrphans
                       Blockchain.Tracing.Tracers
                       Blockchain.Tracing.Types
                       Blockchain.Tracing.Metrics
  build-depends:       base
                     , aeson
                     , async
                     , binary
                     , bytestring
                     , cardano-binary
                     , cardano-crypto-class
                     , cardano-crypto-wrapper
                     , cardano-ledger
                     , cardano-prelude
                     , cardano-shell
                     , cborg
                     , containers
                     , contra-tracer
                     , cryptonite
                     , directory
                     , filepath
                     , hashable
                     , http-client
                     , hexstring
                     , hostname
                     , io-sim-classes
                     , iohk-monitoring
                     , iproute
                     , memory
                     , mtl
                     , network
                     , network-mux
                     , optparse-applicative
                     , ouroboros-consensus
                     , ouroboros-network
                     , prometheus
                     , safe-exceptions
                     , scientific
                     -- newer versions of secp256k1-haskell remove support for public key recovery
                     , secp256k1-haskell == 0.2.4
                     , serialise
                     , text
                     , time
                     , tracer-transformers
                     , transformers
                     , transformers-except
                     , vector
                     , yaml
  default-language:    Haskell2010
  default-extensions:  NoImplicitPrelude
                       OverloadedStrings


executable blockchain-checkpoint-node
  hs-source-dirs:      app
  main-is:             blockchain-checkpoint-node.hs
  default-language:    Haskell2010
  ghc-options:         -threaded
                       -Wall
                       -O2
                       "-with-rtsopts=-T"
                       -fno-warn-unticked-promoted-constructors

  build-depends:       base
                     , aeson
                     , bytestring
                     , cardano-crypto-wrapper
                     , cardano-ledger
                     , cardano-ledger-test
                     , cardano-prelude
                     , cardano-shell
                     , cardano-sl-x509
                     , cborg == 0.2.2.0
                     , containers
                     , contra-tracer
                     , cryptonite
                     , directory
                     , ekg-prometheus-adapter
                     , formatting
                     , io-sim-classes
                     , iohk-monitoring
                     , iproute
                     , lens
                     , mtl
                     , blockchain-checkpoint-node
                     , network
                     , ouroboros-network
                     , ouroboros-consensus
                     , optparse-applicative
                     , safe-exceptions
                     , stm
                     , text
                     , time
  default-language:    Haskell2010
  default-extensions:  NoImplicitPrelude
                       OverloadedStrings
  build-depends:    unix
