cabal-version:      >=1.10
name:               morpho-checkpoint-node
version:            1.0.0
license:            Apache-2.0
maintainer:         operations@iohk.io
author:             IOHK
description:        OBFT checkpoint node
build-type:         Simple
extra-source-files:
    README.md
    ChangeLog.md

library
    exposed-modules:
        Morpho.Common.TopHandler
        Morpho.Common.Socket
        Morpho.Common.Parsers
        Morpho.Common.Bytes
        Morpho.Common.Conversions
        Morpho.Config.Logging
        Morpho.Config.Orphans
        Morpho.Config.Topology
        Morpho.Config.Types
        Morpho.Crypto.ECDSASignature
        Morpho.Ledger.Block
        Morpho.Ledger.Forge
        Morpho.Ledger.Serialise
        Morpho.Ledger.SnapshotTimeTravel
        Morpho.Ledger.State
        Morpho.Ledger.PowTypes
        Morpho.Ledger.Tx
        Morpho.Ledger.Update
        Morpho.Node.ProtocolInfo
        Morpho.Node.Run
        Morpho.Node.RunNode
        Morpho.Node.Features.Node
        Morpho.RPC.Request
        Morpho.RPC.Types
        Morpho.Tracing.TracingOrphanInstances
        Morpho.Tracing.Types
        Morpho.Tracing.Tracers
        Morpho.Tracing.Metrics

    hs-source-dirs:     src
    default-language:   Haskell2010
    default-extensions: NoImplicitPrelude OverloadedStrings
    build-depends:
        base >=4.12.0.0,
        aeson -any,
        async -any,
        binary -any,
        bytestring -any,
        cardano-binary -any,
        cardano-crypto-class -any,
        cardano-crypto-wrapper -any,
        cardano-slotting -any,
        cardano-prelude -any,
        cardano-shell -any,
        cborg -any,
        containers -any,
        contra-tracer -any,
        cryptonite -any,
        directory -any,
        filepath -any,
        hashable -any,
        hexstring -any,
        hostname -any,
        http-client -any,
        io-sim-classes -any,
        iohk-monitoring -any,
        iproute -any,
        memory -any,
        mtl -any,
        network -any,
        network-mux -any,
        optparse-applicative -any,
        ouroboros-consensus -any,
        ouroboros-network -any,
        ouroboros-network-framework -any,
        prometheus -any,
        safe-exceptions -any,
        scientific -any,
        secp256k1-haskell ==0.2.2,
        serialise -any,
        text -any,
        time -any,
        tracer-transformers -any,
        transformers -any,
        transformers-except -any,
        vector -any,
        yaml -any

executable morpho-checkpoint-node
    main-is:            morpho-checkpoint-node.hs
    hs-source-dirs:     app
    default-language:   Haskell2010
    default-extensions: NoImplicitPrelude OverloadedStrings
    ghc-options:
        -threaded -Wall -O2 -with-rtsopts=-T
        -fno-warn-unticked-promoted-constructors

    build-depends:
        base >=4.12.0.0,
        aeson -any,
        bytestring -any,
        cardano-prelude -any,
        cardano-shell -any,
        cborg >=0.2.2 && <0.3,
        containers -any,
        contra-tracer -any,
        cryptonite -any,
        directory -any,
        ekg-prometheus-adapter -any,
        formatting -any,
        io-sim-classes -any,
        iohk-monitoring -any,
        iproute -any,
        lens -any,
        mtl -any,
        morpho-checkpoint-node -any,
        network -any,
        ouroboros-network -any,
        ouroboros-consensus -any,
        optparse-applicative -any,
        safe-exceptions -any,
        stm -any,
        text -any,
        time -any,
        unix -any

test-suite test
    type:               exitcode-stdio-1.0
    main-is:            test.hs
    hs-source-dirs:     tests
    other-modules:
        Test.Morpho.Ledger.State
        Test.Morpho.Crypto.ECDSASignature
        Test.Morpho.Common.Utils
        Test.Morpho.Common.Tables
        Test.Morpho.Examples
        Test.Morpho.Generators
        Test.Morpho.Golden
        Test.Morpho.Serialisation

    default-language:   Haskell2010
    default-extensions: NoImplicitPrelude
    build-depends:
        base >=4.12.0.0,
        serialise -any,
        tasty >=0.7,
        tasty-hunit -any,
        tasty-quickcheck -any,
        tasty-hspec -any,
        time -any,
        hspec-core -any,
        bytestring -any,
        cardano-prelude -any,
        cardano-crypto-class -any,
        cardano-crypto-tests -any,
        cardano-crypto-wrapper -any,
        containers -any,
        cryptonite -any,
        morpho-checkpoint-node -any,
        ouroboros-network -any,
        ouroboros-consensus -any,
        ouroboros-consensus-test-infra -any,
        text -any,
        QuickCheck -any,
        quickcheck-instances -any,
        iohk-monitoring -any,
        cborg -any
