cabal-version:      >=1.10
name:               morpho-checkpoint-node
version:            1.0.0
license:            Apache-2.0
maintainer:         operations@iohk.io
author:             IOHK
description:        OBFT checkpoint node
build-type:         Simple
extra-source-files:
    README.md
    ChangeLog.md

library
    exposed-modules:
        Morpho.Common.TopHandler
        Morpho.Common.Socket
        Morpho.Common.Parsers
        Morpho.Common.Bytes
        Morpho.Common.Conversions
        Morpho.Config.Combined
        Morpho.Config.Logging
        Morpho.Config.Orphans
        Morpho.Config.Topology
        Morpho.Config.Types
        Morpho.Crypto.ECDSASignature
        Morpho.Ledger.Block
        Morpho.Ledger.Forge
        Morpho.Ledger.Serialise
        Morpho.Ledger.SnapshotTimeTravel
        Morpho.Ledger.State
        Morpho.Ledger.PowTypes
        Morpho.Ledger.Tx
        Morpho.Ledger.Update
        Morpho.Node.ProtocolInfo
        Morpho.Node.Run
        Morpho.Node.RunNode
        Morpho.Node.Env
        Morpho.RPC.Abstract
        Morpho.RPC.JsonRpc
        Morpho.RPC.JsonRpcProtocol
        Morpho.Tracing.TracingOrphanInstances
        Morpho.Tracing.Types
        Morpho.Tracing.Tracers
        Morpho.Tracing.Metrics

    hs-source-dirs:     src
    default-language:   Haskell2010
    default-extensions: NoImplicitPrelude OverloadedStrings
    build-depends:
        base >=4.12.0.0,
        aeson,
        async,
        base16-bytestring,
        barbies,
        binary,
        bytestring,
        cardano-binary,
        cardano-crypto-class,
        cardano-crypto-wrapper,
        cardano-slotting,
        cardano-prelude,
        cardano-shell,
        cborg,
        containers,
        contra-tracer,
        directory,
        dns,
        filepath,
        hashable,
        hostname,
        http-client,
        io-sim,
        io-sim-classes,
        iohk-monitoring,
        iproute,
        memory,
        mtl,
        network,
        network-mux,
        nothunks,
        optparse-applicative,
        ouroboros-consensus,
        ouroboros-network,
        ouroboros-network-framework,
        prometheus,
        safe-exceptions,
        scientific,
        secp256k1-haskell,
        serialise,
        text,
        time,
        tracer-transformers,
        transformers,
        transformers-except,
        unordered-containers,
        validation,
        vector,
        yaml,
        wai,
        http-types,
        warp

executable morpho-checkpoint-node
    main-is:            morpho-checkpoint-node.hs
    hs-source-dirs:     app
    default-language:   Haskell2010
    default-extensions: NoImplicitPrelude
    ghc-options:
        -threaded -Wall -O2 -with-rtsopts=-T
        -fno-warn-unticked-promoted-constructors

    build-depends:
        base >=4.12.0.0,
        cardano-prelude,
        morpho-checkpoint-node

test-suite test
    type:               exitcode-stdio-1.0
    main-is:            test.hs
    hs-source-dirs:     tests
    other-modules:
        Test.Morpho.Ledger.State
        Test.Morpho.Crypto.ECDSASignature
        Test.Morpho.Common.Utils
        Test.Morpho.Common.Tables
        Test.Morpho.Examples
        Test.Morpho.Config
        Test.Morpho.Generators
        Test.Morpho.Golden
        Test.Morpho.Serialisation

    default-language:   Haskell2010
    default-extensions: NoImplicitPrelude
    build-depends:
        base >=4.12.0.0,
        aeson,
        QuickCheck,
        barbies,
        bytestring,
        cardano-crypto-class,
        cardano-crypto-wrapper,
        cardano-prelude,
        cardano-binary,
        cborg,
        containers,
        hspec-core,
        iohk-monitoring,
        morpho-checkpoint-node,
        ouroboros-consensus,
        ouroboros-consensus-test,
        ouroboros-network,
        quickcheck-instances,
        serialise,
        tasty,
        tasty-hspec,
        tasty-hunit,
        tasty-quickcheck,
        text,
        time,
        unordered-containers,
        validation

test-suite mantis-integration-tests
    type:               exitcode-stdio-1.0
    main-is:            mantis-integration-tests.hs
    hs-source-dirs:     tests
    other-modules:      Test.Morpho.MantisIntegration
    default-language:   Haskell2010
    default-extensions: NoImplicitPrelude
    build-depends:
        base >=4.12.0.0,
        QuickCheck,
        bytestring,
        cardano-prelude,
        morpho-checkpoint-node,
        process,
        tasty,
        tasty-quickcheck,
        text

test-suite state-machine-tests
    type:               exitcode-stdio-1.0
    main-is:            state-machine-tests.hs
    hs-source-dirs:     tests
    other-modules:
        Test.Morpho.QSM
        Test.Morpho.Generators

    default-language:   Haskell2010
    default-extensions: NoImplicitPrelude
    ghc-options:        -threaded
    build-depends:
        base >=4.12.0.0,
        QuickCheck,
        aeson,
        async,
        barbies,
        bytestring,
        cardano-crypto-class,
        cborg,
        containers,
        directory,
        iohk-monitoring,
        morpho-checkpoint-node,
        ouroboros-consensus,
        ouroboros-consensus-test,
        quickcheck-instances,
        quickcheck-state-machine,
        tasty,
        tasty-quickcheck,
        text
